--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,8 @@
   "description": "Backend Jira application using NodeJs and MySQL",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "start-dev": "set NODE_ENV=dev&&nodemon server.js"
   },
   "author": "Rupinder Pal Singh",
   "license": "ISC",
