--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "start-dev": "set NODE_ENV=dev&&nodemon server.js"
+    "start-dev": "set NODE_ENV=dev&&nodemon server.js",
+    "debug": "ndb server.js"
   },
   "author": "Rupinder Pal Singh",
   "license": "ISC",
@@ -19,5 +20,8 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "ndb": "^1.1.5"
   }
 }
