--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,10 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-query-devtools": "^5.56.2",
+    "@tiptap/extension-highlight": "^2.8.0",
+    "@tiptap/extension-text-align": "^2.8.0",
+    "@tiptap/react": "^2.8.0",
+    "@tiptap/starter-kit": "^2.8.0",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
