--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,6 +26,7 @@
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5"
